--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,20 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+#DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=sass
 # DB_USERNAME=root
 # DB_PASSWORD=
+
+DB_USERNAME=bvizugcdnn@sass-server
+DB_PASSWORD=Hamza5009452
+DB_DATABASE=laravel_db        # the database you created
+DB_HOST=sass-server.mysql.database.azure.com
+DB_PORT=3306
+DB_CONNECTION=mysql
+DB_SSL_MODE=preferred
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
